Clinical Data Updates

--- a/clinicaldata/clinicaldata.html
+++ b/clinicaldata/clinicaldata.html
@@ -127,6 +127,12 @@
                                    <li class="science-topics">
                                         <a href="datareadout.html#ntla2001">NTLA-2001 Phase 1 Data</a>
                                    </li>
+                                   <li class="science-topics">
+                                        <a href="datareadout.html#ntla2002">NTLA-2002 Phase 1 Data</a>
+                                   </li>
+                                   <li class="science-topics">
+                                        <a href="datareadout.html#exacel">Exa-cel Phase 1/2 Data</a>
+                                   </li>
                               </ul>
                          </section>
                     </div>
