--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -109,6 +109,12 @@
                                    <li>
                                         <a href="#ntla2001">NTLA-2001 Phase 1 Data</a>
                                    </li>
+                                   <li>
+                                        <a href="#ntla2002">NTLA-2002 Phase 1 Data</a>
+                                   </li>
+                                   <li>
+                                        <a href="#exacel">Exa-cel Phase 1/2 Data</a>
+                                   </li>
                               </ul>
 
                     <section>
@@ -201,9 +207,108 @@
                          </p>
                          <p>
                               Overall, this data is very encouraging as it shows biomarker data that is superior to current treatments and a 
-                              safety profile that is safer than the current treatments. Its going to take a lot more data before we know for sure 
+                              safety profile that is safer than the current treatments. It's going to take a lot more data before we know for sure 
                               that this therapy will be competitive with RNAi. It needs to hold efficacy and safety to be competitive.
                          </p>
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <section>
+                         <h2 class="section-title" id="ntla2002">NTLA-2002 Phase 1 Data</h2>
+                         <p>Link to the original data pdf so you can follow along 
+                              <a href="https://ir.intelliatx.com/node/10551/pdf" target="_blank">NTLA-2002 Phase 1 Data</a>
+                         </p>
+                         <p>
+                              As usual, the press release starts with a set of bullet statements that are designed to highlight key 
+                              data points in the clinical trial. These statements tell us there were robust levels of kallikrein knockdown 
+                              along with a reduction in HAE attacks. The rate of attacks in these patients were reduced which increased their 
+                              time they are able to live without experiencing another attack. Some of them went up to 10.6 months without 
+                              another attack after treatment. It also tells us it was well tolerated. Now we should confirm all these claims 
+                              by looking at the actual data below.
+                         </p>
+                         <a href="../images/intelliaimage3.png" target="_blank">
+                              <img class="data-set" src="../images/intelliaimage3.png" alt="NTLA-2002 Press Release">
+                         </a>
+                         <p>     
+                             They use a nice chart to lay out the dose cohorts with a 25 mg, 50 mg and 75 mg cohort. It seems by these numbers 
+                             the first dose has had the longest follow up of 32 weeks while dose 2 has only 22 days and 75 mg had 16 weeks. Based 
+                             on that timeline, the middle dose of 50 mg was started last. Each dose saw an increase in kallikrein reduction with 
+                             64%, 81% and 92% respectively. That is impressive at the higher doses. If they can hold upward of 81% to 92% reduction, 
+                             I think they got a winner here for this therapy.
+                         </p>
+                         <a href="../images/intelliaimage4.png" target="_blank">
+                              <img class="data-set" src="../images/intelliaimage4.png" alt="NTLA-2002 Data">
+                         </a>
+                         <p>
+                              The next section of the data is a chart of the HAE attack rates. HAE patients go through attacks that look very much 
+                              like anaphylaxis attacks, but they don't respond to Epipens. They can be very dangerous and life threatening. Any 
+                              good level of sustained reduction in these attacks would be a huge win. Ideally, we would like to see them completely 
+                              eliminate the attacks after treatment. The data is too early to determine that. So far, we have about an 89% reduction 
+                              in the rate of attack after the treatment. This will be the key data that we need to see a longer term follow up on. If 
+                              they can continue to get prolonged reduction of attack rates of 89% or more, then they are a big winner.
+                         </p>
+                         <p>
+                              The last section of the press release is about safety. This therapy looks very clean with mostly grade 1 events which 
+                              are considered mild. No grade 3 event as to date which would be considered serious. With clean safety and long term durability 
+                              they provide a strong benefit to patients.
+                         </p>
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <section>
+                         <h2 class="section-title" id="exacel">Exa-cel Phase 1/2 Data</h2>
+                         <p>Link to the original data word document so you can follow along 
+                              <a href="http://ir.crisprtx.com/static-files/0bdd16b9-d12f-4f51-9fe1-4fd69e4d4851" target="_blank">Exa-cel Phase 1/2 Data</a>
+                         </p>
+                         <p>
+                              I cut off the bullet statements at the top as I wanted to capture the patient cohorts for this 
+                              trial in one screen capture. This data was presented at EHA and was a combination of patients from all 
+                              3 clinical trials. It covers both Transfusion Dependent Thalassemia and Sickle Cell Disease. 
+                         </p>
+                         <a href="../images/crisprimage1.png" target="_blank">
+                              <img class="data-set" src="../images/crisprimage1.png" alt="Exa-cel Press Release">
+                         </a>
+                         <p>     
+                             The data included 44 patients with TDT, of which, 26 of them were beta-zero/beta-zero subtypes. This is important as 
+                             these patients are the worst genotype of the disease. The data from Bluebird help patients with non beta-zero/beta-zero 
+                             genotypes. They only worked best in the less severe patients. The Exa-cel data clearly shows that it works equally well
+                             across both severe and milder patients. Of the 44 patients, 42 of them were completely transfusion independent. Only 2 
+                             did not reach full independence from transfusion, but they were reduced by 75% and 89%. The level of Hemoglobin maintained 
+                             by these patients was greater than 11 g/dl. That is just below the normal range, but well above the level at which 
+                             transfusion would be required. Typically below 9 g/dl will require transfusion. This look like a very effective treatment.
+                             I would go as far as calling it a functional cure for TDT.
+                         </p>
+                         <p>
+                              The data included 31 patients with Sickle Cell Disease. The key is the Vaso-occlusive Crisis. These are sickling attacks 
+                              that are extremely painful and potentially life threatening. The average was 3.9 attacks per year before the therapy and
+                              none after the therapy. They maintained the VOC free state for up to 32.3 months. The level of Fetal Hemoglobin expression 
+                              was 40%. This is lower than the 50% or more needed to completely avoid the VOC crisis as carriers are 50% and they
+                              are relatively disease free. They can have some symptoms under extreme circumstances. This means we could see some relapse 
+                              of the VOC crisis for these patients over time. There is room here for newer therapies to push across the 50% threshold and offer 
+                              a sure winner.
+                         </p>
+                         <a href="../images/crisprimage2.png" target="_blank">
+                              <img class="data-set" src="../images/crisprimage2.png" alt="Exa-cel Data">
+                         </a>
+                         <p>
+                              This section above looks at the safety across both programs. The SCD data is cut off, but it had no events that were 
+                              considered linked to Exa-cel. The Beta Thalassemia patients seemed to have the most complications with the conditioning 
+                              and subsequent treatment. The one place these therapies can improve in future generations are in the conditioning. These 
+                              therapies require myeloablation of the stem cells by Busulfan which is a very toxic drug and leaves patients without an 
+                              immune system until it comes back after the transplant. Newer therapies can strive to replace toxic Busulfan with safer 
+                              therapies or move into in-vivo editing of the stem cell to eliminate it completely. 
+                         </p>
+                         <a href="../images/crisprimage3.png" target="_blank">
+                              <img class="data-set" src="../images/crisprimage3.png" alt="Exa-cel Comments">
+                         </a>
+                         <p>
+                              The last section is the company comments. I think they should be very happy with this data. Many other companies 
+                              that attempted to copy this approach have failed. CRISPR has a very strong functional cure for Beta Thalassemia and 
+                              Sickle Cell Disease. There are places in this therapy where there is a ton of room for improvement over time. There 
+                              were more sections of the press release, but they didn't pertain to the data so I left them out. The link to the full press 
+                              release is linked at the top of this section if you want to read it all.
+                         </p>
+                         
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
