Clinical Data Updates

--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -231,7 +231,7 @@
                          </a>
                          <p>     
                              They use a nice chart to lay out the dose cohorts with a 25 mg, 50 mg and 75 mg cohort. It seems by these numbers 
-                             the first dose has had the longest follow up of 32 weeks while dose 2 has only 22 days and 75 mg had 16 weeks. Based 
+                             the first dose has the longest follow up of 32 weeks while dose 2 has only 22 days and 75 mg had 16 weeks. Based 
                              on that timeline, the middle dose of 50 mg was started last. Each dose saw an increase in kallikrein reduction with 
                              64%, 81% and 92% respectively. That is impressive at the higher doses. If they can hold upward of 81% to 92% reduction, 
                              I think they got a winner here for this therapy.
@@ -270,12 +270,12 @@
                          </a>
                          <p>     
                              The data included 44 patients with TDT, of which, 26 of them were beta-zero/beta-zero subtypes. This is important as 
-                             these patients are the worst genotype of the disease. The data from Bluebird help patients with non beta-zero/beta-zero 
+                             these patients are the worst genotype of the disease. The data from Bluebird helped patients with non beta-zero/beta-zero 
                              genotypes. They only worked best in the less severe patients. The Exa-cel data clearly shows that it works equally well
                              across both severe and milder patients. Of the 44 patients, 42 of them were completely transfusion independent. Only 2 
                              did not reach full independence from transfusion, but they were reduced by 75% and 89%. The level of Hemoglobin maintained 
                              by these patients was greater than 11 g/dl. That is just below the normal range, but well above the level at which 
-                             transfusion would be required. Typically below 9 g/dl will require transfusion. This look like a very effective treatment.
+                             transfusion would be required. Typically below 9 g/dl will require transfusion. This looks like a very effective treatment.
                              I would go as far as calling it a functional cure for TDT.
                          </p>
                          <p>
@@ -296,7 +296,7 @@
                               and subsequent treatment. The one place these therapies can improve in future generations are in the conditioning. These 
                               therapies require myeloablation of the stem cells by Busulfan which is a very toxic drug and leaves patients without an 
                               immune system until it comes back after the transplant. Newer therapies can strive to replace toxic Busulfan with safer 
-                              therapies or move into in-vivo editing of the stem cell to eliminate it completely. 
+                              therapies or move into in-vivo editing of the stem cells to eliminate it completely. 
                          </p>
                          <a href="../images/crisprimage3.png" target="_blank">
                               <img class="data-set" src="../images/crisprimage3.png" alt="Exa-cel Comments">
