--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/26/2023: </strong> I added several more data readouts to the Clinical Data page. I added
+                                   both NTLA2001 and NTLA2002 along with Exa-cel data. 
+                              </p>
+                              <p> 
                                    <strong>2/25/2023: </strong> I added the first data readout overview using
                                     <a href="clinicaldata/datareadout.html#rly4008">RLY-4008 Phase 1 Data</a>
                                    to the clinical data section for learning.
