Clinical Data Update

--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -312,6 +312,44 @@
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
+                    <section>
+                         <h2 class="section-title" id="exacel">CTX-110 Phase 1 Data</h2>
+                         <p>Link to the original data word document so you can follow along 
+                              <a href="http://ir.crisprtx.com/static-files/1521a18c-0864-4d66-9a7b-af07cf79d8a2" target="_blank">CTX-110 Phase 1 Data</a>
+                         </p>
+                         <p>
+                              The first section of the press release was the bullet statements which I cut off to focus on the data. 
+                              This trial was run in 2 parts with Part A and Part B. In 2021, we saw the readout of part A and some 
+                              of this data slightly improved in part B. This is probably related to the higher dose cohorts being treated. 
+                              Here is a link to the first readout from 2021 to compare. 
+                              <a href="https://crisprtx.com/about-us/press-releases-and-presentations/crispr-therapeutics-reports-positive-results-from-its-phase-1-carbon-trial-of-ctx110-in-relapsed-or-refractory-cd19-b-cell-malignancies" target="_blank">First Data Readout</a>
+                         </p>
+                         <a href="../images/crisprimage5.png" target="_blank">
+                              <img class="data-set" src="../images/crisprimage5.png" alt="CTX-110 Press Release">
+                         </a>
+                         <p>     
+                             The second section of the press release lays out the cohorts with 4 dosing levels of 30 million to 600 million cells.
+                             Everything here is pretty standard for all CD19 CAR-T therapy trials. It even gives you a little background on what 
+                             patient populations they were treating. 
+                         </p>
+                         
+                         <a href="../images/crisprimage6.png" target="_blank">
+                              <img class="data-set" src="../images/crisprimage6.png" alt="CTX-110 Data">
+                         </a>
+                         <p>
+                              Part A of the data is updated and shows slight improvement in the ORR moving from 58% in the first readout to 67%
+                              in this data. That is an improvement, but still short of other programs which are getting 75% ORR or higher. The CR
+                              rate improved from 38% to 41% which is still lower than other programs at 50%. The real problem is the durability. 
+                              They didn't even bother to list it anymore in the second data readout. The first data readout showed only 21% of patients 
+                              were still in response at 6 months. That is way below the average of 50% for other programs. I suspect this is because
+                              they knocked out MHC I but never replaced it with anything to pacify NK cells. That made things worse and not better. 
+                              It was rejected even faster than if they hadn't even done that edit. That has led CRISPR to come up with a 2nd generation 
+                              of these CAR-T programs with newer edits. All we can do is hope these edits are better than the last ones.
+                         </p>
+                         
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
                     <p>&#42; I am not a doctor. This is not designed to be Medical Advice. Please refer to your doctor for Medical Decisions</p>
                </div>
 
