--- a/clinicaldata/clinicaldata.html
+++ b/clinicaldata/clinicaldata.html
@@ -133,6 +133,9 @@
                                    <li class="science-topics">
                                         <a href="datareadout.html#exacel">Exa-cel Phase 1/2 Data</a>
                                    </li>
+                                   <li class="science-topics">
+                                        <a href="datareadout.html#ctx110">CTX-110 Phase 1 Data</a>
+                                   </li>
                               </ul>
                          </section>
                     </div>
