--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -115,6 +115,9 @@
                                    <li>
                                         <a href="#exacel">Exa-cel Phase 1/2 Data</a>
                                    </li>
+                                   <li>
+                                        <a href="#ctx110">CTX-110 Phase 1 Data</a>
+                                   </li>
                               </ul>
 
                     <section>
@@ -313,7 +316,7 @@
                     </section>
 
                     <section>
-                         <h2 class="section-title" id="exacel">CTX-110 Phase 1 Data</h2>
+                         <h2 class="section-title" id="ctx110">CTX-110 Phase 1 Data</h2>
                          <p>Link to the original data word document so you can follow along 
                               <a href="http://ir.crisprtx.com/static-files/1521a18c-0864-4d66-9a7b-af07cf79d8a2" target="_blank">CTX-110 Phase 1 Data</a>
                          </p>
