--- a/clinicaldata/clinicaldata.html
+++ b/clinicaldata/clinicaldata.html
@@ -136,6 +136,9 @@
                                    <li class="science-topics">
                                         <a href="datareadout.html#ctx110">CTX-110 Phase 1 Data</a>
                                    </li>
+                                   <li class="science-topics">
+                                        <a href="datareadout.html#cb010">CB-010 Phase 1 Data</a>
+                                   </li>
                               </ul>
                          </section>
                     </div>
