Revolution Profile Updated

--- a/companies/revolution.html
+++ b/companies/revolution.html
@@ -81,7 +81,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/15/2023</p>
+                    <p class="updated">Last Updated 2/27/2023</p>
 
                     <h1 class="company-name"><a href="https://www.revmed.com/">Revolution Medicines</a></h1>
 
@@ -94,7 +94,9 @@
                                    cancer growth. These are the MAPK and mTOR pathways. They are very complex pathways so not 
                                    everything tested will work. There will be some hit and miss in these pathways to find right combinations 
                                    to hit the right targets. They are focused on RAS mutations and companion drugs to combine with the RAS drugs 
-                                   to reach the correct inhibition desired. 
+                                   to reach the correct inhibition desired. They use an unique approach to blocking the activation of the kinase.
+                                   They build a binder molecule that takes the activated kinase and binds it to cyclophilin A. This 
+                                   prevents the activation of that kinase and its eventual degradation. 
                               </p>
                          </section>  
 
@@ -103,19 +105,20 @@
                               <p class="profiles">
                                    I have followed Revolution Medicines and Mark Goldsmith for over a year now. I think he is doing a 
                                    good job with this company. They are out there talking about their science and how they are 
-                                   different from others in this space. They have managed the balance sheet well. They even have some 
-                                   early data to show they are working through the drug development process. It will take more time to 
-                                   see how their science translates into data.
+                                   different from others in this space. They have managed the balance sheet well. They recently did a secondary 
+                                   in a really weak biotech market, and it was received well. They even have some early data to show they 
+                                   are working through the drug development process. They have multiple drugs moving into early clinical trials now.
+                                   It will take more time to see how their science translates into data.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   RMC-6291 targets multiple forms of RAS to include multiple KRAS targets. This is designed to be a pan inhibitor. 
+                                   RMC-6236 targets multiple forms of RAS to include multiple KRAS targets. This is designed to be a pan inhibitor. 
                                    There is a lot of risk in this approach as any hitting of wild type RAS can come with serious side effects. The data shows 
                                    that upward of 30% of all cancers have a RAS mutation. This could affect well over 100,000 patients across multiple mutations.
-                                   This is in early phase 1 with no data yet.
+                                   This is in early phase 1, and they announced some early safety data that shows its being well tolerated so far.
                               </p>
                               <p class="profiles">
                                    RMC-6291 targets KRAS G12C. This is designed for 2 purposes. The first is it acts as a backup molecule should the multi 
@@ -124,9 +127,16 @@
                                    is early phase 1 with no data yet.
                               </p>
                               <p class="profiles">
+                                   RMC-9805 targets KRAS G12D. This is designed for 2 purposes. The first is it acts as a backup molecule should the multi 
+                                   RAS drug fail. The second is it can be combined with the multi RAS drug in combinations for KRAS G12D cancers. This targets the 
+                                   RAS on form of KRAS. It does this by binding the KRAS to cyclophilin A. This is expected to start dosing in mid 2023.
+                              </p>
+                              <p class="profiles">
                                    RMC-4630 is a SHP2 inhibitor. This is the first kinase activated by the growth receptor inside cells. It starts 
                                    at the top of the MAPK pathway. This is designed to be a companion inhibitor to RAS drugs. This is currently in phase 
-                                   2 trials. The phase 1 data was encouraging, but it needs a dosing regimen to keep tolerability. 
+                                   1b trials in combination with other KRAS G12C inhibitors. The phase 1 data was encouraging, but it needs a dosing regimen 
+                                   to keep tolerability. This program was given back to Revolution from Sanofi. They plan to continue to develop it on 
+                                   their own for key KRAS combinations.
                               </p>
                               <p class="profiles">
                                    RMC-5552 is a 4EBP1 inhibitor which is downstream of mTOR. This is being designed as another RAS companion 
@@ -137,7 +147,7 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $655 million
+                                   Cash $644 million
                               </p>
                               <p class="profiles">
                                    RMC-6236 is the RAS multi drug with huge potential if the data works out. It could have a market size of 
@@ -145,9 +155,16 @@
                                    in potential. I would give it a .1 multiplier which gives this program $300 million value.
                               </p>
                               <p class="profiles">
-                                   RMC-6291 is a KRAS G12C inhibitor. If RAS multi works, I don't think this gets much market share. I would think 
-                                   it might have value only if the RAS multi fails. That would be a mutually exclusive outcome. This would replace 
-                                   only some of the value lost if RAS multi fails.
+                                   RMC-6291 is a KRAS G12C inhibitor. If RAS multi works, I don't think this gets much market share unless it combines 
+                                   well with the multi RAS inhibitor. That will take a lot of time to prove out if it works at all. 
+                                   I would only give this a small value amount since it requires RAS multi to combo well with it. I would give them $25 
+                                   million value for a phase 1 asset.
+                              </p>
+                              <p class="profiles">
+                                   RMC-9805 is a KRAS G12D inhibitor. If RAS multi works, I don't think this gets much market share unless it combines 
+                                   well with the multi RAS inhibitor. That will take a lot of time to prove out if it works at all. 
+                                   I would only give this a small value amount since it requires RAS multi to combo well with it. I would give them $25 
+                                   million value for a phase 1 asset.
                               </p>
                               <p class="profiles">
                                    RMC-4630 is a SHP2 inhibitor which can be quite toxic with side effects. That will significantly reduce its market 
@@ -159,14 +176,14 @@
                                    I see better data.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $1.08 billion market cap. Based on the 88 million shares outstanding, that comes to $12.27.
+                                   All in, that is a $1.119 billion market cap. Based on the 90.49 million shares outstanding, that comes to $12.36.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Sanofi just terminated their partnership and returned RMC-4630 back to Revolution Medicine.
                               </p>
                          </section>
 
@@ -177,6 +194,9 @@
                               </p>
                               <p class="profiles">
                                    RMC-6291 Preliminary Data 2H of 2023
+                              </p>
+                              <p class="profiles">
+                                   RMC-9805 Phase 1 Start in Mid 2023
                               </p>
                               <p class="profiles">
                                    RMC-4630 Top Line Data 2H of 2023
