--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/28/2023: </strong> I update the profile for <a href="companies/revolution.html">RVMD</a>
+                                   after doing the 10K. 
+                              </p>
+                              <p> 
+                                   <strong>2/27/2023: </strong> I added several more data readouts to the Clinical Data page. I added
+                                   both CTX-110 and CB010. 
+                              </p>
+                              <p> 
                                    <strong>2/26/2023: </strong> I added several more data readouts to the Clinical Data page. I added
                                    both NTLA2001 and NTLA2002 along with Exa-cel data. 
                               </p>
@@ -136,14 +144,6 @@
                                    the site. Its currently under construction so it will probably be a mess until I get
                                    the pages laid out. 
                               </p>
-                              <p> 
-                                   <strong>2/22/2023: </strong> I finished off the Science Pages with filling out the <a href="learning/biology.html">Biology</a>
-                                   section.
-                              <p> 
-                              <p> 
-                                   <strong>2/21/2023: </strong> I finished the build out my <a href="investing/portfoliobuilding.html">Investing</a>
-                                   page of the website by adding several new sections today. 
-                              <p> 
                          </div>
                     </section>
                </div>
